--- a/inspectit-ocelot-core/src/test/resources/otel-config.yaml
+++ b/inspectit-ocelot-core/src/test/resources/otel-config.yaml
@@ -32,26 +32,26 @@ receivers:
   zipkin:
 
 exporters:
-  logging:
-    logLevel: $LOGGING_EXPORTER_LOG_lEVEL
   otlp:
     endpoint: $OTLP_EXPORTER_ENDPOINT
     tls:
       insecure: true
     compression: none
+  debug:
+    verbosity: detailed
 
 service:
   extensions: [health_check]
   pipelines:
     metrics:
       receivers: [otlp, prometheus, influxdb]
-      exporters: [logging, otlp]
+      exporters: [debug, otlp]
     traces:
       receivers: [otlp, jaeger, zipkin]
-      exporters: [logging, otlp]
+      exporters: [debug, otlp]
     logs:
       receivers: [otlp]
-      exporters: [logging, otlp]
+      exporters: [debug, otlp]
   telemetry:
     logs:
       level: "info"
