--- a/components/inspectit-ocelot-configdocsgenerator/build.gradle
+++ b/components/inspectit-ocelot-configdocsgenerator/build.gradle
@@ -11,6 +11,7 @@ dependencies {
 
             configServerLibs.orgMockitoMockitoJunitJupiter,
             configServerLibs.comGoogleGuava,
+            libs.ioOpentelemetryOpentelemetryApi,
             libs.orgAssertjAssertjCore,
     )
 
