--- a/.github/workflows/configdocsgenerator_test.yml
+++ b/.github/workflows/configdocsgenerator_test.yml
@@ -16,9 +16,9 @@ jobs:
     runs-on: ubuntu-latest
     env:
       working-directory: ./components/inspectit-ocelot-configdocsgenerator
-    container: openjdk:8-jdk
+    container: eclipse-temurin:17
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
       - name: test
@@ -28,7 +28,7 @@ jobs:
   dependency-scan:
     name: Dependency Scan
     runs-on: ubuntu-latest
-    container: openjdk:8-jdk
+    container: eclipse-temurin:17
     steps:
       - uses: actions/checkout@v3
       - name: Grant execute permission for gradlew
