--- a/settings.gradle
+++ b/settings.gradle
@@ -4,17 +4,17 @@ include 'inspectit-ocelot-core'
 include "inspectit-ocelot-agent"
 include 'inspectit-ocelot-documentation'
 include 'inspectit-ocelot-sdk'
-include 'inspectit-ocelot-configdocsgenerator'
-project(':inspectit-ocelot-configdocsgenerator').projectDir = new File('./components/inspectit-ocelot-configdocsgenerator')
 
 println("Current Java version: " + JavaVersion.current())
 if(JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_17)) {
     include 'inspectit-ocelot-configurationserver'
     include 'inspectit-ocelot-configurationserver-ui'
+    include 'inspectit-ocelot-configdocsgenerator'
     project(':inspectit-ocelot-configurationserver').projectDir = new File('./components/inspectit-ocelot-configurationserver')
     project(':inspectit-ocelot-configurationserver-ui').projectDir = new File('./components/inspectit-ocelot-configurationserver-ui')
+    project(':inspectit-ocelot-configdocsgenerator').projectDir = new File('./components/inspectit-ocelot-configdocsgenerator')
 
-    // seperate version catalog for configurationServer until everything is migrated to Java17
+    // separate version catalog for configuration server until everything is migrated to Java 17
     dependencyResolutionManagement {
         versionCatalogs {
             configServerLibs {
