fix configdocsgenerator again

--- a/components/inspectit-ocelot-configdocsgenerator/build.gradle
+++ b/components/inspectit-ocelot-configdocsgenerator/build.gradle
@@ -29,6 +29,9 @@ dependencies {
     annotationProcessor libs.orgProjectlombokLombok
 }
 
+// there is no main class here
+bootJar.enabled = false
+
 test {
     useJUnitPlatform()
 }
