--- a/inspectit-ocelot-core/src/test/resources/otel-config.yaml
+++ b/inspectit-ocelot-core/src/test/resources/otel-config.yaml
@@ -8,18 +8,6 @@ receivers:
       grpc:
       http:
 
-  # scrape Prometheus
-  prometheus:
-    config:
-      scrape_configs:
-        - job_name: 'otel-collector'
-          scrape_interval: 500ms
-          static_configs:
-            - targets:  [$PROMETHEUS_SCRAPE_TARGET]
-
-  # accept InfluxDB
-  influxdb:
-
   # accept Zipkin
   zipkin:
 
@@ -36,7 +24,7 @@ service:
   extensions: [health_check]
   pipelines:
     metrics:
-      receivers: [otlp] #, prometheus, influxdb]
+      receivers: [otlp]
       exporters: [debug, otlp]
     traces:
       receivers: [otlp, zipkin]
