--- a/inspectit-ocelot-core/src/test/resources/otel-config.yaml
+++ b/inspectit-ocelot-core/src/test/resources/otel-config.yaml
@@ -2,31 +2,11 @@ extensions:
   health_check: {}
 receivers:
 
-  # accept Jaeger over all protocols
-  jaeger:
-    protocols:
-      grpc:
-      thrift_binary:
-      thrift_http:
-      thrift_compact:
-
   # accept OTLP over all protocols
   otlp:
     protocols:
       grpc:
       http:
-
-  # scrape Prometheus
-  prometheus:
-    config:
-      scrape_configs:
-        - job_name: 'otel-collector'
-          scrape_interval: 500ms
-          static_configs:
-            - targets:  [$PROMETHEUS_SCRAPE_TARGET]
-
-  # accept InfluxDB
-  influxdb:
 
   # accept Zipkin
   zipkin:
@@ -38,16 +18,16 @@ exporters:
       insecure: true
     compression: none
   debug:
-    verbosity: detailed
+#    verbosity: detailed
 
 service:
   extensions: [health_check]
   pipelines:
     metrics:
-      receivers: [otlp, prometheus, influxdb]
+      receivers: [otlp]
       exporters: [debug, otlp]
     traces:
-      receivers: [otlp, jaeger, zipkin]
+      receivers: [otlp, zipkin]
       exporters: [debug, otlp]
     logs:
       receivers: [otlp]
