--- a/.github/workflows/agent_test.yml
+++ b/.github/workflows/agent_test.yml
@@ -4,6 +4,15 @@ on:
   push:
     branches:
       - master
+    paths-ignore:
+      - 'components/**'
+      - 'inspectit-ocelot-documentation/**'
+      - 'resources/**'
+      - 'codequality/**'
+      - '**.md'
+      - '**.txt'
+      - '.github/**'
+      - '.circleci/**'
   pull_request:
     paths-ignore:
       - 'components/**'
