--- a/.github/workflows/configdocsgenerator_test.yml
+++ b/.github/workflows/configdocsgenerator_test.yml
@@ -4,10 +4,23 @@ on:
   push:
     branches:
       - master
+    paths-ignore:
+      - 'inspectit-ocelot-documentation/**'
+      - 'resources/**'
+      - 'codequality/**'
+      - '**.md'
+      - '**.txt'
+      - '.github/**'
+      - '.circleci/**'
   pull_request:
-    paths:
-      - '.github/workflows/configdocsgenerator_test.yml'
-      - 'components/inspectit-ocelot-configdocsgenerator/**'
+    paths-ignore:
+      - 'inspectit-ocelot-documentation/**'
+      - 'resources/**'
+      - 'codequality/**'
+      - '**.md'
+      - '**.txt'
+      - '.github/**'
+      - '.circleci/**'
   workflow_call:
 
 jobs:
