--- a/.github/workflows/agent_test.yml
+++ b/.github/workflows/agent_test.yml
@@ -14,6 +14,8 @@ on:
       - '.github/**'
       - '.circleci/**'
       - 'gradle/configserverlibs.versions.toml'
+      - 'package.json'
+      - 'yarn.lock'
   pull_request:
     paths-ignore:
       - 'components/**'
@@ -25,6 +27,8 @@ on:
       - '.github/**'
       - '.circleci/**'
       - 'gradle/configserverlibs.versions.toml'
+      - 'package.json'
+      - 'yarn.lock'
   workflow_call:
 
 jobs:
