--- a/components/inspectit-ocelot-configurationserver-ui/package.json
+++ b/components/inspectit-ocelot-configurationserver-ui/package.json
@@ -88,6 +88,8 @@
   },
   "resolutions": {
     "@babel/helpers": "^7.26.10",
-    "prismjs": "^1.30.0"
+    "prismjs": "^1.30.0",
+    "lodash": "^4.17.21",
+    "esbuild": "^0.25.0"
   }
 }
