--- a/components/inspectit-ocelot-configurationserver-ui/package.json
+++ b/components/inspectit-ocelot-configurationserver-ui/package.json
@@ -26,16 +26,16 @@
   },
   "dependencies": {
     "ace-builds": "^1.13.2",
-    "axios": "^1.7.4",
+    "axios": "^1.8.2",
     "classnames": "^2.3.1",
     "dateformat": "^3.0.3",
-    "eslint-config-next": "^14.2.5",
+    "eslint-config-next": "^14.2.26",
     "file-saver": "^2.0.5",
     "js-yaml": "^4.1.0",
     "jszip": "^3.10.0",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
-    "next": "^14.2.23",
+    "next": "^14.2.26",
     "primeflex": "^3.2.1",
     "primeicons": "^5.0.0",
     "primereact": "^8.5.0",
@@ -62,20 +62,20 @@
   },
   "license": "Apache-2.0",
   "devDependencies": {
-    "@babel/core": "^7.19.1",
-    "@babel/eslint-parser": "^7.18.9",
-    "@babel/helper-builder-react-jsx": "^7.19.0",
+    "@babel/core": "^7.26.10",
+    "@babel/eslint-parser": "^7.26.10",
+    "@babel/helper-builder-react-jsx": "^7.25.9",
     "@babel/helper-call-delegate": "^7.12.13",
     "@babel/helper-define-map": "^7.18.6",
     "@babel/helper-regex": "^7.10.5",
-    "@babel/helper-string-parser": "^7.18.10",
-    "@babel/preset-react": "^7.18.6",
-    "@next/eslint-plugin-next": "^14.0.4",
+    "@babel/helper-string-parser": "^7.25.9",
+    "@babel/preset-react": "^7.26.3",
+    "@next/eslint-plugin-next": "^14.2.26",
     "@storybook/addon-actions": "^7.6.19",
     "@storybook/addon-essentials": "^7.6.19",
     "@storybook/addon-links": "^7.6.19",
     "@storybook/react": "^7.6.19",
-    "babel-loader": "^9.1.3",
+    "babel-loader": "^9.2.1",
     "eslint": "8.55.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-webpack": "^0.13.2",
@@ -85,5 +85,11 @@
     "file-loader": "^6.2.0",
     "prettier": "^3.1.1",
     "url-loader": "^4.1.1"
+  },
+  "resolutions": {
+    "@babel/helpers": "^7.26.10",
+    "prismjs": "^1.30.0",
+    "lodash": "^4.17.21",
+    "esbuild": "^0.25.0"
   }
 }
