--- a/.github/workflows/configurationserver_security_check.yml
+++ b/.github/workflows/configurationserver_security_check.yml
@@ -40,6 +40,7 @@ jobs:
           format: 'HTML'
           out: 'reports/configuration-server-ui'
           args: >
+            --suppression components/inspectit-ocelot-configurationserver-ui/dependencyCheckSuppression.xml
             --disableAssembly
             --disableNodeAudit
             --nvdApiKey ${{ secrets.NVD_API_KEY }}
